// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`site-visit GET /site-visit/schedule-visit should render the schedule visit page 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-l govuk-!-margin-bottom-3">Schedule site visit</h1>
        </div>
    </div>
    <form method="post" novalidate="novalidate">
        <details class="govuk-details" data-module="govuk-details">
            <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Relevant information</span>
            </summary>
            <div class="govuk-details__text">
                <dl class="govuk-summary-list govuk-summary-list--no-border">
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                        <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks</dt>
                        <dd class="govuk-summary-list__value">.</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site details 1</dt>
                        <dd class="govuk-summary-list__value">Eva Sharma
                            <br>21 The Pavement, Wandsworth, SW4 0HY
                            <br>
                        </dd>
                    </div>
                </dl>
            </div>
        </details>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select visit type</legend>
                <div class="govuk-radios" data-module="govuk-radios">
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type" name="visit-type" type="radio"
                        value="unaccompanied">
                        <label class="govuk-label govuk-radios__label" for="visit-type">Unaccompanied</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-2" name="visit-type"
                        type="radio" value="accessRequired">
                        <label class="govuk-label govuk-radios__label" for="visit-type-2">Access required</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-3" name="visit-type"
                        type="radio" value="accompanied">
                        <label class="govuk-label govuk-radios__label" for="visit-type-3">Accompanied</label>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="visit-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select a date</legend>
                <div id="visit-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                <div class="govuk-date-input" id="visit-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-day" name="visit-date-day" type="text" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-month" name="visit-date-month" type="text" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                            id="visit-date-year" name="visit-date-year" type="text" inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <h2>Select a time</h2>
        <p class="govuk-body">Time is optional for unaccompanied site visits</p>
        <p class="govuk-body">Enter a time, for example 9:00 or 16:30</p>
        <fieldset class="govuk-fieldset govuk-!-margin-top-4">
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Start time</legend>
            <div class="govuk-form-group govuk-!-margin-bottom-4">
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-hour"
                name="visit-start-time-hour" type="number" value="">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-minute"
                name="visit-start-time-minute" type="number" value="">
            </div>
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">End time</legend>
            <div class="govuk-form-group">
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-hour"
                name="visit-end-time-hour" type="number" value="">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-minute"
                name="visit-end-time-minute" type="number" value="">
            </div>
        </fieldset>
        <button type="submit" class="govuk-button govuk-!-margin-top-3" data-module="govuk-button">Schedule site visit</button>
    </form>
</main>"
`;

exports[`site-visit GET /site-visit/visit-scheduled should render the visit scheduled confirmation page 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-width-container">
        <div class="govuk-grid-row">
            <div class="govuk-grid-column-full">
                <div class="govuk-panel govuk-panel--confirmation">
                    <h1 class="govuk-panel__title"> Site visit booked</h1>
                    <div class="govuk-panel__body">Appeal ID
                        <br><strong>351062</strong>
                    </div>
                </div>
            </div>
        </div>
        <div class="govuk-grid-row">
            <div class="govuk-grid-column-full govuk-!-padding-top-2">
                <p class="govuk-body">Your accompanied site visit at 21 The Pavement, Wandsworth, SW4 0HY is
                    booked for 9 October 2023, starting at 09:38.</p>
                <h2 class="govuk-heading-m">What happens next</h2>
                <p class="govuk-body">We updated the case timetable. We&#39;ve sent an email to the LPA and
                    appellant to confirm the site visit.</p>
                <p class="govuk-body"><a class="govuk-link" href="/appeals-service/appeal-details/1">Go back to case details</a>
                </p>
            </div>
        </div>
    </div>
</main>"
`;

exports[`site-visit POST /site-visit/schedule-visit should re-render the schedule visit page with the expected error message if an invalid visit date was provided 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#">Visit date must be a valid date</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-l govuk-!-margin-bottom-3">Schedule site visit</h1>
        </div>
    </div>
    <form method="post" novalidate="novalidate">
        <details class="govuk-details" data-module="govuk-details">
            <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Relevant information</span>
            </summary>
            <div class="govuk-details__text">
                <dl class="govuk-summary-list govuk-summary-list--no-border">
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                        <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks</dt>
                        <dd class="govuk-summary-list__value">.</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site details 1</dt>
                        <dd class="govuk-summary-list__value">Eva Sharma
                            <br>21 The Pavement, Wandsworth, SW4 0HY
                            <br>
                        </dd>
                    </div>
                </dl>
            </div>
        </details>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select visit type</legend>
                <div class="govuk-radios" data-module="govuk-radios">
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type" name="visit-type" type="radio"
                        value="unaccompanied" checked>
                        <label class="govuk-label govuk-radios__label" for="visit-type">Unaccompanied</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-2" name="visit-type"
                        type="radio" value="accessRequired">
                        <label class="govuk-label govuk-radios__label" for="visit-type-2">Access required</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-3" name="visit-type"
                        type="radio" value="accompanied">
                        <label class="govuk-label govuk-radios__label" for="visit-type-3">Accompanied</label>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="visit-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select a date</legend>
                <div id="visit-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                <div class="govuk-date-input" id="visit-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-day" name="visit-date-day" type="text" value="29" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-month" name="visit-date-month" type="text" value="2" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                            id="visit-date-year" name="visit-date-year" type="text" value="2023" inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <h2>Select a time</h2>
        <p class="govuk-body">Time is optional for unaccompanied site visits</p>
        <p class="govuk-body">Enter a time, for example 9:00 or 16:30</p>
        <fieldset class="govuk-fieldset govuk-!-margin-top-4">
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Start time</legend>
            <div class="govuk-form-group govuk-!-margin-bottom-4">
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-hour"
                name="visit-start-time-hour" type="number" value="10">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-minute"
                name="visit-start-time-minute" type="number" value="00">
            </div>
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">End time</legend>
            <div class="govuk-form-group">
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-hour"
                name="visit-end-time-hour" type="number" value="11">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-minute"
                name="visit-end-time-minute" type="number" value="30">
            </div>
        </fieldset>
        <button type="submit" class="govuk-button govuk-!-margin-top-3" data-module="govuk-button">Schedule site visit</button>
    </form>
</main>"
`;

exports[`site-visit POST /site-visit/schedule-visit should re-render the schedule visit page with the expected error message if visit date day is invalid 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#visit-date-day">Visit date day must be between 1 and 31</a>
                            </li>
                            <li><a href="#">Visit date must be a valid date</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-l govuk-!-margin-bottom-3">Schedule site visit</h1>
        </div>
    </div>
    <form method="post" novalidate="novalidate">
        <details class="govuk-details" data-module="govuk-details">
            <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Relevant information</span>
            </summary>
            <div class="govuk-details__text">
                <dl class="govuk-summary-list govuk-summary-list--no-border">
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                        <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks</dt>
                        <dd class="govuk-summary-list__value">.</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site details 1</dt>
                        <dd class="govuk-summary-list__value">Eva Sharma
                            <br>21 The Pavement, Wandsworth, SW4 0HY
                            <br>
                        </dd>
                    </div>
                </dl>
            </div>
        </details>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select visit type</legend>
                <div class="govuk-radios" data-module="govuk-radios">
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type" name="visit-type" type="radio"
                        value="unaccompanied" checked>
                        <label class="govuk-label govuk-radios__label" for="visit-type">Unaccompanied</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-2" name="visit-type"
                        type="radio" value="accessRequired">
                        <label class="govuk-label govuk-radios__label" for="visit-type-2">Access required</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-3" name="visit-type"
                        type="radio" value="accompanied">
                        <label class="govuk-label govuk-radios__label" for="visit-type-3">Accompanied</label>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="visit-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select a date</legend>
                <div id="visit-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                <div class="govuk-date-input" id="visit-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-day" name="visit-date-day" type="text" value="0" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-month" name="visit-date-month" type="text" value="1" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                            id="visit-date-year" name="visit-date-year" type="text" value="2023" inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <h2>Select a time</h2>
        <p class="govuk-body">Time is optional for unaccompanied site visits</p>
        <p class="govuk-body">Enter a time, for example 9:00 or 16:30</p>
        <fieldset class="govuk-fieldset govuk-!-margin-top-4">
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Start time</legend>
            <div class="govuk-form-group govuk-!-margin-bottom-4">
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-hour"
                name="visit-start-time-hour" type="number" value="10">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-minute"
                name="visit-start-time-minute" type="number" value="00">
            </div>
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">End time</legend>
            <div class="govuk-form-group">
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-hour"
                name="visit-end-time-hour" type="number" value="11">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-minute"
                name="visit-end-time-minute" type="number" value="30">
            </div>
        </fieldset>
        <button type="submit" class="govuk-button govuk-!-margin-top-3" data-module="govuk-button">Schedule site visit</button>
    </form>
</main>"
`;

exports[`site-visit POST /site-visit/schedule-visit should re-render the schedule visit page with the expected error message if visit date day is invalid 2`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#visit-date-day">Visit date day must be between 1 and 31</a>
                            </li>
                            <li><a href="#">Visit date must be a valid date</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-l govuk-!-margin-bottom-3">Schedule site visit</h1>
        </div>
    </div>
    <form method="post" novalidate="novalidate">
        <details class="govuk-details" data-module="govuk-details">
            <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Relevant information</span>
            </summary>
            <div class="govuk-details__text">
                <dl class="govuk-summary-list govuk-summary-list--no-border">
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                        <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks</dt>
                        <dd class="govuk-summary-list__value">.</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site details 1</dt>
                        <dd class="govuk-summary-list__value">Eva Sharma
                            <br>21 The Pavement, Wandsworth, SW4 0HY
                            <br>
                        </dd>
                    </div>
                </dl>
            </div>
        </details>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select visit type</legend>
                <div class="govuk-radios" data-module="govuk-radios">
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type" name="visit-type" type="radio"
                        value="unaccompanied" checked>
                        <label class="govuk-label govuk-radios__label" for="visit-type">Unaccompanied</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-2" name="visit-type"
                        type="radio" value="accessRequired">
                        <label class="govuk-label govuk-radios__label" for="visit-type-2">Access required</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-3" name="visit-type"
                        type="radio" value="accompanied">
                        <label class="govuk-label govuk-radios__label" for="visit-type-3">Accompanied</label>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="visit-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select a date</legend>
                <div id="visit-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                <div class="govuk-date-input" id="visit-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-day" name="visit-date-day" type="text" value="32" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-month" name="visit-date-month" type="text" value="1" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                            id="visit-date-year" name="visit-date-year" type="text" value="2023" inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <h2>Select a time</h2>
        <p class="govuk-body">Time is optional for unaccompanied site visits</p>
        <p class="govuk-body">Enter a time, for example 9:00 or 16:30</p>
        <fieldset class="govuk-fieldset govuk-!-margin-top-4">
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Start time</legend>
            <div class="govuk-form-group govuk-!-margin-bottom-4">
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-hour"
                name="visit-start-time-hour" type="number" value="10">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-minute"
                name="visit-start-time-minute" type="number" value="00">
            </div>
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">End time</legend>
            <div class="govuk-form-group">
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-hour"
                name="visit-end-time-hour" type="number" value="11">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-minute"
                name="visit-end-time-minute" type="number" value="30">
            </div>
        </fieldset>
        <button type="submit" class="govuk-button govuk-!-margin-top-3" data-module="govuk-button">Schedule site visit</button>
    </form>
</main>"
`;

exports[`site-visit POST /site-visit/schedule-visit should re-render the schedule visit page with the expected error message if visit date month is invalid 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#visit-date-month">Visit date month must be between 1 and 12</a>
                            </li>
                            <li><a href="#">Visit date must be a valid date</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-l govuk-!-margin-bottom-3">Schedule site visit</h1>
        </div>
    </div>
    <form method="post" novalidate="novalidate">
        <details class="govuk-details" data-module="govuk-details">
            <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Relevant information</span>
            </summary>
            <div class="govuk-details__text">
                <dl class="govuk-summary-list govuk-summary-list--no-border">
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                        <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks</dt>
                        <dd class="govuk-summary-list__value">.</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site details 1</dt>
                        <dd class="govuk-summary-list__value">Eva Sharma
                            <br>21 The Pavement, Wandsworth, SW4 0HY
                            <br>
                        </dd>
                    </div>
                </dl>
            </div>
        </details>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select visit type</legend>
                <div class="govuk-radios" data-module="govuk-radios">
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type" name="visit-type" type="radio"
                        value="unaccompanied" checked>
                        <label class="govuk-label govuk-radios__label" for="visit-type">Unaccompanied</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-2" name="visit-type"
                        type="radio" value="accessRequired">
                        <label class="govuk-label govuk-radios__label" for="visit-type-2">Access required</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-3" name="visit-type"
                        type="radio" value="accompanied">
                        <label class="govuk-label govuk-radios__label" for="visit-type-3">Accompanied</label>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="visit-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select a date</legend>
                <div id="visit-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                <div class="govuk-date-input" id="visit-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-day" name="visit-date-day" type="text" value="1" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-month" name="visit-date-month" type="text" value="0" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                            id="visit-date-year" name="visit-date-year" type="text" value="2023" inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <h2>Select a time</h2>
        <p class="govuk-body">Time is optional for unaccompanied site visits</p>
        <p class="govuk-body">Enter a time, for example 9:00 or 16:30</p>
        <fieldset class="govuk-fieldset govuk-!-margin-top-4">
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Start time</legend>
            <div class="govuk-form-group govuk-!-margin-bottom-4">
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-hour"
                name="visit-start-time-hour" type="number" value="10">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-minute"
                name="visit-start-time-minute" type="number" value="00">
            </div>
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">End time</legend>
            <div class="govuk-form-group">
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-hour"
                name="visit-end-time-hour" type="number" value="11">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-minute"
                name="visit-end-time-minute" type="number" value="30">
            </div>
        </fieldset>
        <button type="submit" class="govuk-button govuk-!-margin-top-3" data-module="govuk-button">Schedule site visit</button>
    </form>
</main>"
`;

exports[`site-visit POST /site-visit/schedule-visit should re-render the schedule visit page with the expected error message if visit date month is invalid 2`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#visit-date-month">Visit date month must be between 1 and 12</a>
                            </li>
                            <li><a href="#">Visit date must be a valid date</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-l govuk-!-margin-bottom-3">Schedule site visit</h1>
        </div>
    </div>
    <form method="post" novalidate="novalidate">
        <details class="govuk-details" data-module="govuk-details">
            <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Relevant information</span>
            </summary>
            <div class="govuk-details__text">
                <dl class="govuk-summary-list govuk-summary-list--no-border">
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                        <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks</dt>
                        <dd class="govuk-summary-list__value">.</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site details 1</dt>
                        <dd class="govuk-summary-list__value">Eva Sharma
                            <br>21 The Pavement, Wandsworth, SW4 0HY
                            <br>
                        </dd>
                    </div>
                </dl>
            </div>
        </details>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select visit type</legend>
                <div class="govuk-radios" data-module="govuk-radios">
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type" name="visit-type" type="radio"
                        value="unaccompanied" checked>
                        <label class="govuk-label govuk-radios__label" for="visit-type">Unaccompanied</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-2" name="visit-type"
                        type="radio" value="accessRequired">
                        <label class="govuk-label govuk-radios__label" for="visit-type-2">Access required</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-3" name="visit-type"
                        type="radio" value="accompanied">
                        <label class="govuk-label govuk-radios__label" for="visit-type-3">Accompanied</label>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="visit-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select a date</legend>
                <div id="visit-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                <div class="govuk-date-input" id="visit-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-day" name="visit-date-day" type="text" value="1" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-month" name="visit-date-month" type="text" value="13" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                            id="visit-date-year" name="visit-date-year" type="text" value="2023" inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <h2>Select a time</h2>
        <p class="govuk-body">Time is optional for unaccompanied site visits</p>
        <p class="govuk-body">Enter a time, for example 9:00 or 16:30</p>
        <fieldset class="govuk-fieldset govuk-!-margin-top-4">
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Start time</legend>
            <div class="govuk-form-group govuk-!-margin-bottom-4">
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-hour"
                name="visit-start-time-hour" type="number" value="10">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-minute"
                name="visit-start-time-minute" type="number" value="00">
            </div>
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">End time</legend>
            <div class="govuk-form-group">
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-hour"
                name="visit-end-time-hour" type="number" value="11">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-minute"
                name="visit-end-time-minute" type="number" value="30">
            </div>
        </fieldset>
        <button type="submit" class="govuk-button govuk-!-margin-top-3" data-module="govuk-button">Schedule site visit</button>
    </form>
</main>"
`;

exports[`site-visit POST /site-visit/schedule-visit should re-render the schedule visit page with the expected error message if visit date year is invalid 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#visit-date-year">Visit date year must be 4 digits</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-l govuk-!-margin-bottom-3">Schedule site visit</h1>
        </div>
    </div>
    <form method="post" novalidate="novalidate">
        <details class="govuk-details" data-module="govuk-details">
            <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Relevant information</span>
            </summary>
            <div class="govuk-details__text">
                <dl class="govuk-summary-list govuk-summary-list--no-border">
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                        <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks</dt>
                        <dd class="govuk-summary-list__value">.</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site details 1</dt>
                        <dd class="govuk-summary-list__value">Eva Sharma
                            <br>21 The Pavement, Wandsworth, SW4 0HY
                            <br>
                        </dd>
                    </div>
                </dl>
            </div>
        </details>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select visit type</legend>
                <div class="govuk-radios" data-module="govuk-radios">
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type" name="visit-type" type="radio"
                        value="unaccompanied" checked>
                        <label class="govuk-label govuk-radios__label" for="visit-type">Unaccompanied</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-2" name="visit-type"
                        type="radio" value="accessRequired">
                        <label class="govuk-label govuk-radios__label" for="visit-type-2">Access required</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-3" name="visit-type"
                        type="radio" value="accompanied">
                        <label class="govuk-label govuk-radios__label" for="visit-type-3">Accompanied</label>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="visit-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select a date</legend>
                <div id="visit-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                <div class="govuk-date-input" id="visit-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-day" name="visit-date-day" type="text" value="1" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-month" name="visit-date-month" type="text" value="1" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                            id="visit-date-year" name="visit-date-year" type="text" value="202" inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <h2>Select a time</h2>
        <p class="govuk-body">Time is optional for unaccompanied site visits</p>
        <p class="govuk-body">Enter a time, for example 9:00 or 16:30</p>
        <fieldset class="govuk-fieldset govuk-!-margin-top-4">
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Start time</legend>
            <div class="govuk-form-group govuk-!-margin-bottom-4">
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-hour"
                name="visit-start-time-hour" type="number" value="10">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-minute"
                name="visit-start-time-minute" type="number" value="00">
            </div>
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">End time</legend>
            <div class="govuk-form-group">
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-hour"
                name="visit-end-time-hour" type="number" value="11">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-minute"
                name="visit-end-time-minute" type="number" value="30">
            </div>
        </fieldset>
        <button type="submit" class="govuk-button govuk-!-margin-top-3" data-module="govuk-button">Schedule site visit</button>
    </form>
</main>"
`;

exports[`site-visit POST /site-visit/schedule-visit should re-render the schedule visit page with the expected error message if visit date year is invalid 2`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#visit-date-year">Visit date year must be 4 digits</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-l govuk-!-margin-bottom-3">Schedule site visit</h1>
        </div>
    </div>
    <form method="post" novalidate="novalidate">
        <details class="govuk-details" data-module="govuk-details">
            <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Relevant information</span>
            </summary>
            <div class="govuk-details__text">
                <dl class="govuk-summary-list govuk-summary-list--no-border">
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                        <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks</dt>
                        <dd class="govuk-summary-list__value">.</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site details 1</dt>
                        <dd class="govuk-summary-list__value">Eva Sharma
                            <br>21 The Pavement, Wandsworth, SW4 0HY
                            <br>
                        </dd>
                    </div>
                </dl>
            </div>
        </details>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select visit type</legend>
                <div class="govuk-radios" data-module="govuk-radios">
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type" name="visit-type" type="radio"
                        value="unaccompanied" checked>
                        <label class="govuk-label govuk-radios__label" for="visit-type">Unaccompanied</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-2" name="visit-type"
                        type="radio" value="accessRequired">
                        <label class="govuk-label govuk-radios__label" for="visit-type-2">Access required</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-3" name="visit-type"
                        type="radio" value="accompanied">
                        <label class="govuk-label govuk-radios__label" for="visit-type-3">Accompanied</label>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="visit-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select a date</legend>
                <div id="visit-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                <div class="govuk-date-input" id="visit-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-day" name="visit-date-day" type="text" value="1" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-month" name="visit-date-month" type="text" value="1" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                            id="visit-date-year" name="visit-date-year" type="text" value="20233" inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <h2>Select a time</h2>
        <p class="govuk-body">Time is optional for unaccompanied site visits</p>
        <p class="govuk-body">Enter a time, for example 9:00 or 16:30</p>
        <fieldset class="govuk-fieldset govuk-!-margin-top-4">
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Start time</legend>
            <div class="govuk-form-group govuk-!-margin-bottom-4">
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-hour"
                name="visit-start-time-hour" type="number" value="10">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-minute"
                name="visit-start-time-minute" type="number" value="00">
            </div>
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">End time</legend>
            <div class="govuk-form-group">
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-hour"
                name="visit-end-time-hour" type="number" value="11">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-minute"
                name="visit-end-time-minute" type="number" value="30">
            </div>
        </fieldset>
        <button type="submit" class="govuk-button govuk-!-margin-top-3" data-module="govuk-button">Schedule site visit</button>
    </form>
</main>"
`;

exports[`site-visit POST /site-visit/schedule-visit should re-render the schedule visit page with the expected error message if visit end time hour is invalid 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#visit-end-time-hour">End time hour cannot be less than 0 or greater than 23</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-l govuk-!-margin-bottom-3">Schedule site visit</h1>
        </div>
    </div>
    <form method="post" novalidate="novalidate">
        <details class="govuk-details" data-module="govuk-details">
            <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Relevant information</span>
            </summary>
            <div class="govuk-details__text">
                <dl class="govuk-summary-list govuk-summary-list--no-border">
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                        <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks</dt>
                        <dd class="govuk-summary-list__value">.</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site details 1</dt>
                        <dd class="govuk-summary-list__value">Eva Sharma
                            <br>21 The Pavement, Wandsworth, SW4 0HY
                            <br>
                        </dd>
                    </div>
                </dl>
            </div>
        </details>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select visit type</legend>
                <div class="govuk-radios" data-module="govuk-radios">
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type" name="visit-type" type="radio"
                        value="unaccompanied" checked>
                        <label class="govuk-label govuk-radios__label" for="visit-type">Unaccompanied</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-2" name="visit-type"
                        type="radio" value="accessRequired">
                        <label class="govuk-label govuk-radios__label" for="visit-type-2">Access required</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-3" name="visit-type"
                        type="radio" value="accompanied">
                        <label class="govuk-label govuk-radios__label" for="visit-type-3">Accompanied</label>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="visit-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select a date</legend>
                <div id="visit-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                <div class="govuk-date-input" id="visit-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-day" name="visit-date-day" type="text" value="1" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-month" name="visit-date-month" type="text" value="1" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                            id="visit-date-year" name="visit-date-year" type="text" value="2023" inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <h2>Select a time</h2>
        <p class="govuk-body">Time is optional for unaccompanied site visits</p>
        <p class="govuk-body">Enter a time, for example 9:00 or 16:30</p>
        <fieldset class="govuk-fieldset govuk-!-margin-top-4">
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Start time</legend>
            <div class="govuk-form-group govuk-!-margin-bottom-4">
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-hour"
                name="visit-start-time-hour" type="number" value="10">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-minute"
                name="visit-start-time-minute" type="number" value="00">
            </div>
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">End time</legend>
            <div class="govuk-form-group">
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-hour"
                name="visit-end-time-hour" type="number" value="24">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-minute"
                name="visit-end-time-minute" type="number" value="30">
            </div>
        </fieldset>
        <button type="submit" class="govuk-button govuk-!-margin-top-3" data-module="govuk-button">Schedule site visit</button>
    </form>
</main>"
`;

exports[`site-visit POST /site-visit/schedule-visit should re-render the schedule visit page with the expected error message if visit end time minute is invalid 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#visit-end-time-minute">End time minute cannot be less than 0 or greater than 59</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-l govuk-!-margin-bottom-3">Schedule site visit</h1>
        </div>
    </div>
    <form method="post" novalidate="novalidate">
        <details class="govuk-details" data-module="govuk-details">
            <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Relevant information</span>
            </summary>
            <div class="govuk-details__text">
                <dl class="govuk-summary-list govuk-summary-list--no-border">
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                        <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks</dt>
                        <dd class="govuk-summary-list__value">.</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site details 1</dt>
                        <dd class="govuk-summary-list__value">Eva Sharma
                            <br>21 The Pavement, Wandsworth, SW4 0HY
                            <br>
                        </dd>
                    </div>
                </dl>
            </div>
        </details>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select visit type</legend>
                <div class="govuk-radios" data-module="govuk-radios">
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type" name="visit-type" type="radio"
                        value="unaccompanied" checked>
                        <label class="govuk-label govuk-radios__label" for="visit-type">Unaccompanied</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-2" name="visit-type"
                        type="radio" value="accessRequired">
                        <label class="govuk-label govuk-radios__label" for="visit-type-2">Access required</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-3" name="visit-type"
                        type="radio" value="accompanied">
                        <label class="govuk-label govuk-radios__label" for="visit-type-3">Accompanied</label>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="visit-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select a date</legend>
                <div id="visit-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                <div class="govuk-date-input" id="visit-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-day" name="visit-date-day" type="text" value="1" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-month" name="visit-date-month" type="text" value="1" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                            id="visit-date-year" name="visit-date-year" type="text" value="2023" inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <h2>Select a time</h2>
        <p class="govuk-body">Time is optional for unaccompanied site visits</p>
        <p class="govuk-body">Enter a time, for example 9:00 or 16:30</p>
        <fieldset class="govuk-fieldset govuk-!-margin-top-4">
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Start time</legend>
            <div class="govuk-form-group govuk-!-margin-bottom-4">
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-hour"
                name="visit-start-time-hour" type="number" value="10">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-minute"
                name="visit-start-time-minute" type="number" value="00">
            </div>
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">End time</legend>
            <div class="govuk-form-group">
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-hour"
                name="visit-end-time-hour" type="number" value="11">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-minute"
                name="visit-end-time-minute" type="number" value="60">
            </div>
        </fieldset>
        <button type="submit" class="govuk-button govuk-!-margin-top-3" data-module="govuk-button">Schedule site visit</button>
    </form>
</main>"
`;

exports[`site-visit POST /site-visit/schedule-visit should re-render the schedule visit page with the expected error message if visit start time hour is invalid 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#visit-start-time-hour">Start time hour cannot be less than 0 or greater than 23</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-l govuk-!-margin-bottom-3">Schedule site visit</h1>
        </div>
    </div>
    <form method="post" novalidate="novalidate">
        <details class="govuk-details" data-module="govuk-details">
            <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Relevant information</span>
            </summary>
            <div class="govuk-details__text">
                <dl class="govuk-summary-list govuk-summary-list--no-border">
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                        <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks</dt>
                        <dd class="govuk-summary-list__value">.</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site details 1</dt>
                        <dd class="govuk-summary-list__value">Eva Sharma
                            <br>21 The Pavement, Wandsworth, SW4 0HY
                            <br>
                        </dd>
                    </div>
                </dl>
            </div>
        </details>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select visit type</legend>
                <div class="govuk-radios" data-module="govuk-radios">
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type" name="visit-type" type="radio"
                        value="unaccompanied" checked>
                        <label class="govuk-label govuk-radios__label" for="visit-type">Unaccompanied</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-2" name="visit-type"
                        type="radio" value="accessRequired">
                        <label class="govuk-label govuk-radios__label" for="visit-type-2">Access required</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-3" name="visit-type"
                        type="radio" value="accompanied">
                        <label class="govuk-label govuk-radios__label" for="visit-type-3">Accompanied</label>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="visit-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select a date</legend>
                <div id="visit-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                <div class="govuk-date-input" id="visit-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-day" name="visit-date-day" type="text" value="1" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-month" name="visit-date-month" type="text" value="1" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                            id="visit-date-year" name="visit-date-year" type="text" value="2023" inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <h2>Select a time</h2>
        <p class="govuk-body">Time is optional for unaccompanied site visits</p>
        <p class="govuk-body">Enter a time, for example 9:00 or 16:30</p>
        <fieldset class="govuk-fieldset govuk-!-margin-top-4">
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Start time</legend>
            <div class="govuk-form-group govuk-!-margin-bottom-4">
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-hour"
                name="visit-start-time-hour" type="number" value="24">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-minute"
                name="visit-start-time-minute" type="number" value="00">
            </div>
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">End time</legend>
            <div class="govuk-form-group">
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-hour"
                name="visit-end-time-hour" type="number" value="11">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-minute"
                name="visit-end-time-minute" type="number" value="30">
            </div>
        </fieldset>
        <button type="submit" class="govuk-button govuk-!-margin-top-3" data-module="govuk-button">Schedule site visit</button>
    </form>
</main>"
`;

exports[`site-visit POST /site-visit/schedule-visit should re-render the schedule visit page with the expected error message if visit start time minute is invalid 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#visit-start-time-minute">Start time minute cannot be less than 0 or greater than 59</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-l govuk-!-margin-bottom-3">Schedule site visit</h1>
        </div>
    </div>
    <form method="post" novalidate="novalidate">
        <details class="govuk-details" data-module="govuk-details">
            <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Relevant information</span>
            </summary>
            <div class="govuk-details__text">
                <dl class="govuk-summary-list govuk-summary-list--no-border">
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                        <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks</dt>
                        <dd class="govuk-summary-list__value">.</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site details 1</dt>
                        <dd class="govuk-summary-list__value">Eva Sharma
                            <br>21 The Pavement, Wandsworth, SW4 0HY
                            <br>
                        </dd>
                    </div>
                </dl>
            </div>
        </details>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select visit type</legend>
                <div class="govuk-radios" data-module="govuk-radios">
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type" name="visit-type" type="radio"
                        value="unaccompanied" checked>
                        <label class="govuk-label govuk-radios__label" for="visit-type">Unaccompanied</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-2" name="visit-type"
                        type="radio" value="accessRequired">
                        <label class="govuk-label govuk-radios__label" for="visit-type-2">Access required</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-3" name="visit-type"
                        type="radio" value="accompanied">
                        <label class="govuk-label govuk-radios__label" for="visit-type-3">Accompanied</label>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="visit-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select a date</legend>
                <div id="visit-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                <div class="govuk-date-input" id="visit-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-day" name="visit-date-day" type="text" value="1" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-month" name="visit-date-month" type="text" value="1" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                            id="visit-date-year" name="visit-date-year" type="text" value="2023" inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <h2>Select a time</h2>
        <p class="govuk-body">Time is optional for unaccompanied site visits</p>
        <p class="govuk-body">Enter a time, for example 9:00 or 16:30</p>
        <fieldset class="govuk-fieldset govuk-!-margin-top-4">
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Start time</legend>
            <div class="govuk-form-group govuk-!-margin-bottom-4">
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-hour"
                name="visit-start-time-hour" type="number" value="10">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-minute"
                name="visit-start-time-minute" type="number" value="60">
            </div>
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">End time</legend>
            <div class="govuk-form-group">
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-hour"
                name="visit-end-time-hour" type="number" value="11">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-minute"
                name="visit-end-time-minute" type="number" value="30">
            </div>
        </fieldset>
        <button type="submit" class="govuk-button govuk-!-margin-top-3" data-module="govuk-button">Schedule site visit</button>
    </form>
</main>"
`;

exports[`site-visit POST /site-visit/schedule-visit should re-render the schedule visit page with the expected error messages if required fields are not populated 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#visit-type">Please select a visit type</a>
                            </li>
                            <li><a href="#visit-date-day">Visit date day cannot be empty</a>
                            </li>
                            <li><a href="#visit-date-month">Visit date month cannot be empty</a>
                            </li>
                            <li><a href="#visit-date-year">Visit date year cannot be empty</a>
                            </li>
                            <li><a href="#">Visit date must be a valid date</a>
                            </li>
                            <li><a href="#visit-start-time-hour">Start time hour cannot be empty</a>
                            </li>
                            <li><a href="#visit-start-time-minute">Start time minute cannot be empty</a>
                            </li>
                            <li><a href="#visit-end-time-hour">End time hour cannot be empty</a>
                            </li>
                            <li><a href="#visit-end-time-minute">End time minute cannot be empty</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-l govuk-!-margin-bottom-3">Schedule site visit</h1>
        </div>
    </div>
    <form method="post" novalidate="novalidate">
        <details class="govuk-details" data-module="govuk-details">
            <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Relevant information</span>
            </summary>
            <div class="govuk-details__text">
                <dl class="govuk-summary-list govuk-summary-list--no-border">
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site address</dt>
                        <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks</dt>
                        <dd class="govuk-summary-list__value">.</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site details 1</dt>
                        <dd class="govuk-summary-list__value">Eva Sharma
                            <br>21 The Pavement, Wandsworth, SW4 0HY
                            <br>
                        </dd>
                    </div>
                </dl>
            </div>
        </details>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select visit type</legend>
                <div class="govuk-radios" data-module="govuk-radios">
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type" name="visit-type" type="radio"
                        value="unaccompanied">
                        <label class="govuk-label govuk-radios__label" for="visit-type">Unaccompanied</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-2" name="visit-type"
                        type="radio" value="accessRequired">
                        <label class="govuk-label govuk-radios__label" for="visit-type-2">Access required</label>
                    </div>
                    <div class="govuk-radios__item">
                        <input class="govuk-radios__input" id="visit-type-3" name="visit-type"
                        type="radio" value="accompanied">
                        <label class="govuk-label govuk-radios__label" for="visit-type-3">Accompanied</label>
                    </div>
                </div>
            </fieldset>
        </div>
        <div class="govuk-form-group">
            <fieldset class="govuk-fieldset" role="group" aria-describedby="visit-date-hint">
                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Select a date</legend>
                <div id="visit-date-hint" class="govuk-hint">For example, 27 3 2023</div>
                <div class="govuk-date-input" id="visit-date">
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-day">Day</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-day" name="visit-date-day" type="text" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-month">Month</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                            id="visit-date-month" name="visit-date-month" type="text" inputmode="numeric">
                        </div>
                    </div>
                    <div class="govuk-date-input__item">
                        <div class="govuk-form-group">
                            <label class="govuk-label govuk-date-input__label" for="visit-date-year">Year</label>
                            <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                            id="visit-date-year" name="visit-date-year" type="text" inputmode="numeric">
                        </div>
                    </div>
                </div>
            </fieldset>
        </div>
        <h2>Select a time</h2>
        <p class="govuk-body">Time is optional for unaccompanied site visits</p>
        <p class="govuk-body">Enter a time, for example 9:00 or 16:30</p>
        <fieldset class="govuk-fieldset govuk-!-margin-top-4">
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">Start time</legend>
            <div class="govuk-form-group govuk-!-margin-bottom-4">
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-hour"
                name="visit-start-time-hour" type="number" value="">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-start-time-minute"
                name="visit-start-time-minute" type="number" value="">
            </div>
            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">End time</legend>
            <div class="govuk-form-group">
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-hour"
                name="visit-end-time-hour" type="number" value="">&nbsp;:&nbsp;
                <input class="govuk-input govuk-input--width-2" id="visit-end-time-minute"
                name="visit-end-time-minute" type="number" value="">
            </div>
        </fieldset>
        <button type="submit" class="govuk-button govuk-!-margin-top-3" data-module="govuk-button">Schedule site visit</button>
    </form>
</main>"
`;
